add twitter, update config file

--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,10 @@ url:  http://swcool.github.io
 title: Talk about Tech and Biz
 author: Shane Weng
 
+twitter: baiyungroup  
+disqus_shortname: swgithub
+
+
 # --------------------- #
 #   Jekyll & Plugin 
 # --------------------- #
