support google plus

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ author: Shane Weng
 
 twitter: baiyungroup  
 disqus_shortname: swgithub
-
+googleplus: shane.weng@gmail.com
 
 # --------------------- #
 #   Jekyll & Plugin 
