update atom.xml and remove google analytics

--- a/_config.yml
+++ b/_config.yml
@@ -2,16 +2,14 @@
 #   Main Configs
 # --------------------- #
 url:  http://swcool.github.io
-addr: swcool.github.io
-title: Talk about Tech and Biz
+title: Talk about Tech and Business
 author: Shane Weng
-categories: blog coding biz
+categories: [blog, coding, biz]
 permalink: /:categories/:title
 
-twitter: baiyungroup  
+twitter: baiyungroup
 disqus_shortname: swgithub
 googleplus: shane.weng@gmail.com
-analytics: UA-44428045-1
 
 # --------------------- #
 #   Jekyll & Plugin 
