update disqus with shaneweng.com

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ categories: [blog, coding, biz]
 permalink: /:categories/:title
 
 twitter: baiyungroup
-disqus_shortname: swgithub
+disqus_shortname: shanewengcom
 googleplus: shane.weng@gmail.com
 
 # --------------------- #
