--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ permalink: /:categories/:title
 twitter: baiyungroup
 disqus_shortname: shanewengcom
 googleplus: shane.weng@gmail.com
+analytics: UA-45893255-1
 
 # --------------------- #
 #   Jekyll & Plugin 
