--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,8 @@ analytics: UA-45893255-1
 # --------------------- #
 
 markdown: redcarpet
-pygments: true
+# pygments: true
+highlighter: pygments
 
 redcarpet:
   extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
