--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # --------------------- #
 #   Main Configs
 # --------------------- #
-url:  http://www.shaneweng.com
+url:  http://shaneweng.com
 title: Talk about Tech and Business
 author: Shane Weng
 categories: [blog, blog-tech, blog-biz, blog-live]
